--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
                                 <a href="https://www.facebook.com/share/cgzKPMQMdchWCXSR/" class="social-icon-link bi-facebook"></a>
                             </li>
                             <li class="social-icon-item">
-                                <a href="https://api.whatsapp.com/send?phone=+967770602080" class="social-icon-link bi-whatsapp"></a>
+                                <a href="https://wa.me/+967770602080" target="_black" class="social-icon-link bi-whatsapp"></a>
                             </li>
 
                             <li class="social-icon-item">
