--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
 
                         <p>
                             <strong class="d-inline me-2">الايميل:</strong>
-                            <a href="wadi.jaref.spa@gmail.com">wadi.jaref.spa@gmail.com  </a> 
+                          <a href="mailto:wadi.jaref.spa@gmail.com">wadi.jaref.spa@gmail.com  </a> 
                         </p>
                     </div>
 
